inspect_output.txt
    Checking sb-transport v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-transport)
    Checking app v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/app)
error[E0432]: unresolved import `yamux::Control`
  --> crates/sb-transport/src/multiplex.rs:86:33
   |
86 | use yamux::{Config, Connection, Control, Mode};
   |                                 ^^^^^^^ no `Control` in the root

error[E0412]: cannot find type `Control` in crate `yamux`
   --> crates/sb-transport/src/multiplex.rs:203:21
    |
203 |     control: yamux::Control,
    |                     ^^^^^^^ not found in `yamux`

error[E0412]: cannot find type `Control` in crate `yamux`
   --> crates/sb-transport/src/multiplex.rs:211:28
    |
211 |     fn new(control: yamux::Control, closed: Arc<std::sync::atomic::AtomicBool>) -> Self {
    |                            ^^^^^^^ not found in `yamux`

warning: unused import: `Method`
  --> crates/sb-transport/src/http2.rs:74:12
   |
74 | use http::{Method, Request, Uri};
   |            ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BytesMut`
  --> crates/sb-transport/src/grpc.rs:43:25
   |
43 | use bytes::{Buf, Bytes, BytesMut};
   |                         ^^^^^^^^

warning: unused import: `futures::stream::Stream`
  --> crates/sb-transport/src/grpc.rs:44:5
   |
44 | use futures::stream::Stream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `TunnelRequest` and `TunnelResponse`
   --> crates/sb-transport/src/grpc.rs:204:22
    |
204 |         use tunnel::{TunnelRequest, TunnelResponse};
    |                      ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `futures::future::poll_fn`
  --> crates/sb-transport/src/multiplex.rs:76:5
   |
76 | use futures::future::poll_fn;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `futures::Stream`
  --> crates/sb-transport/src/multiplex.rs:85:5
   |
85 | use futures::Stream;
   |     ^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> crates/sb-transport/src/circuit_breaker.rs:27:5
   |
27 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0599]: no method named `control` found for struct `yamux::Connection` in the current scope
   --> crates/sb-transport/src/multiplex.rs:408:34
    |
408 |         let control = connection.control();
    |                                  ^^^^^^^ method not found in `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`

error[E0277]: the trait bound `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::Stream` is not satisfied
   --> crates/sb-transport/src/multiplex.rs:415:49
    |
415 |             while let Some(_) = StreamExt::next(&mut connection).await {
    |                                 --------------- ^^^^^^^^^^^^^^^ the trait `futures::Stream` is not implemented for `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`
    |                                 |
    |                                 required by a bound introduced by this call
    |
    = help: the following other types implement trait `futures::Stream`:
              &mut S
              Abortable<St>
              AssertUnwindSafe<S>
              Box<S>
              Buffer<S, Item>
              BufferUnordered<St>
              Buffered<St>
              ChunksTimeout<S>
            and 136 others
note: required by a bound in `futures::StreamExt::next`
   --> /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.31/src/stream/stream/mod.rs:249:22
    |
249 | pub trait StreamExt: Stream {
    |                      ^^^^^^ required by this bound in `StreamExt::next`
...
273 |     fn next(&mut self) -> Next<'_, Self>
    |        ---- required by a bound in this associated function

error[E0277]: the trait bound `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::Stream` is not satisfied
   --> crates/sb-transport/src/multiplex.rs:415:66
    |
415 |             while let Some(_) = StreamExt::next(&mut connection).await {
    |                                 -------------------------------- ^^^^^ the trait `futures::Stream` is not implemented for `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`
    |                                 |
    |                                 this call returns `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`
    |
    = help: the following other types implement trait `futures::Stream`:
              &mut S
              Abortable<St>
              AssertUnwindSafe<S>
              Box<S>
              Buffer<S, Item>
              BufferUnordered<St>
              Buffered<St>
              ChunksTimeout<S>
            and 136 others
    = note: required for `Next<'_, yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>>` to implement `futures::Future`
    = note: required for `Next<'_, yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>>` to implement `std::future::IntoFuture`
help: remove the `.await`
    |
415 -             while let Some(_) = StreamExt::next(&mut connection).await {
415 +             while let Some(_) = StreamExt::next(&mut connection) {
    |

error[E0277]: the trait bound `yamux::Connection<Compat<tokio::net::TcpStream>>: futures::Stream` is not satisfied
   --> crates/sb-transport/src/multiplex.rs:675:35
    |
675 |             match StreamExt::next(&mut connection).await {
    |                   --------------- ^^^^^^^^^^^^^^^ the trait `futures::Stream` is not implemented for `yamux::Connection<Compat<tokio::net::TcpStream>>`
    |                   |
    |                   required by a bound introduced by this call
    |
    = help: the following other types implement trait `futures::Stream`:
              &mut S
              Abortable<St>
              AssertUnwindSafe<S>
              Box<S>
              Buffer<S, Item>
              BufferUnordered<St>
              Buffered<St>
              ChunksTimeout<S>
            and 136 others
note: required by a bound in `futures::StreamExt::next`
   --> /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.31/src/stream/stream/mod.rs:249:22
    |
249 | pub trait StreamExt: Stream {
    |                      ^^^^^^ required by this bound in `StreamExt::next`
...
273 |     fn next(&mut self) -> Next<'_, Self>
    |        ---- required by a bound in this associated function

error[E0277]: the trait bound `yamux::Connection<Compat<tokio::net::TcpStream>>: futures::Stream` is not satisfied
   --> crates/sb-transport/src/multiplex.rs:675:52
    |
675 |             match StreamExt::next(&mut connection).await {
    |                   -------------------------------- ^^^^^ the trait `futures::Stream` is not implemented for `yamux::Connection<Compat<tokio::net::TcpStream>>`
    |                   |
    |                   this call returns `yamux::Connection<Compat<tokio::net::TcpStream>>`
    |
    = help: the following other types implement trait `futures::Stream`:
              &mut S
              Abortable<St>
              AssertUnwindSafe<S>
              Box<S>
              Buffer<S, Item>
              BufferUnordered<St>
              Buffered<St>
              ChunksTimeout<S>
            and 136 others
    = note: required for `Next<'_, yamux::Connection<Compat<tokio::net::TcpStream>>>` to implement `futures::Future`
    = note: required for `Next<'_, yamux::Connection<Compat<tokio::net::TcpStream>>>` to implement `std::future::IntoFuture`
help: remove the `.await`
    |
675 -             match StreamExt::next(&mut connection).await {
675 +             match StreamExt::next(&mut connection) {
    |

warning: unused import: `SinkExt`
  --> crates/sb-transport/src/grpc.rs:45:15
   |
45 | use futures::{SinkExt, StreamExt};
   |               ^^^^^^^

warning: unused variable: `cx`
   --> crates/sb-transport/src/http2.rs:381:48
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                                                ^^ help: if this is intentional, prefix it with an underscore: `_cx`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> crates/sb-transport/src/http2.rs:381:22
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                      ----^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `error`
   --> crates/sb-transport/src/retry.rs:265:35
    |
265 |     pub fn is_transient_dns_error(error: &DialError) -> bool {
    |                                   ^^^^^ help: if this is intentional, prefix it with an underscore: `_error`

warning: unused variable: `is_timeout`
   --> crates/sb-transport/src/circuit_breaker.rs:399:36
    |
399 |     fn should_count_failure(&self, is_timeout: bool) -> bool {
    |                                    ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_timeout`

Some errors have detailed explanations: E0277, E0412, E0432, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `sb-transport` (lib) generated 12 warnings
error: could not compile `sb-transport` (lib) due to 8 previous errors; 12 warnings emitted
